Use getFirst method